--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -15,12 +15,12 @@
   <form action="/posts" method="POST">
     <div class="mb-3">
       <label for="title" class="form-label">Where?</label>
-      <input type="text" class="form-control" name="title" id="title">
+      <input type="text" class="form-control" name="title" id="title" required>
     </div>
 
     <div class="mb-3">
       <label for="youtube" class="form-label">Youtube Address</label>
-      <input type="youtube" class="form-control" name="youtube" id="youtube" placeholder="e.g. https://www.youtube.com/watch?v=h_xjfqrFl7o or https://youtu.be/h_xjfqrFl7o">
+      <input type="youtube" class="form-control" name="youtube" id="youtube" placeholder="e.g. https://www.youtube.com/watch?v=h_xjfqrFl7o or https://youtu.be/h_xjfqrFl7o" required>
     </div>
 
     <div class="form-floating">
