--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -12,4 +12,4 @@
   <h4 class="text-center mt-5 mb-5"><a href="/users/<%= current_user.id %>"><button class="btn btn-lg btn-dark">Your Profile</button></a></h4>
 <% end %>
 
-<div class="text-center"><a href="/">Back to Main</a></div>
+<div class="text-center"><a href="/users/<%= current_user.id %>">Back to Profile</a></div>
