--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,33 +1,45 @@
 <% if logged_in? %>
 <div class="card" style="width: 100%;">
-  <div class="card-body">
-    <h5 class="card-title">Profile</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Username: <%= @user.username %></h6>
-    <p class="card-text"><%= @user.email %></p>
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
+  <div class="card-body text-center">
+    <h1 class="card-title">User Profile</h1>
+    <h2 class="card-subtitle mb-2 text-muted">Username: <%= @user.username %></h2>
+    <h3 class="card-text"><%= @user.email %></h3>
+
+    <% if admin? %>
+      <h3>Admin? <% if @user.admin %> [ Yes ] <% else %> [ No ]<% end %></h3>
+      <h3>SuperAdmin?  <% if @user.super %> [ Yes ] <% else %> [ No ]<% end %></h3>
+      <div>
+        <a href="/users">Users List</a>
+        <% if super? %>
+        <span> | </span>
+        <a href="/users/<%= @user.id %>/edit">Edit the user info</a>
+      </div>
+      <div class="mt-3">
+        <% if not @user.super %>
+        <form action="/users/<%= @user.id %>" method="POST">
+          <input type="hidden" name="_method" value="delete">
+          <button type="submit" class="btn btn-sm btn-warning">Delet This User</button>
+        </form>
+        <% end %>
+      </div>
+      <% else %>
+      </div>
+      <% end %>
+    <% end %>
   </div>
 </div>
 
-  <h1>Welcome, <%= current_user.username %>!</h1>
-  <h3>username: <%= @user.username %></h3>
-  <h3>Email: <%= @user.email %></h3>
-  <h4>Posted Countries</h4>
-  <% @user.countries.each do |country| %>
-    <h5>Name: <a href="/countries/<%= country.id %>"><%= country.name %></a></h5>  
-    <p><a href="<%= country.url %>" target="_blank">Click Here for Country Info</a></p>
+  <h2 class="text-center mt-5 mb-5">Posted Countries</h2>
+  <% @user.countries.uniq.each do |country| %>
+    <h4 class="text-center">Name: <a href="/countries/<%= country.id %>"><%= country.name %></a></h4>
+    <p class="text-center">(Click the country name to see all the vlogs list about this country.)</p>
+    <p class="text-center mb-5"><a href="<%= country.url %>" target="_blank">Click Here for Country Info</a></p>
   <% end %>
-  <% if admin? %>
-    <h3>Admin? <%= @user.admin %></h3>
-    <h3>Super? <%= @user.super %></h3>
-    <a href="/users">Users List</a>
-    <% if super? %>
-      <a href="/users/<%= @user.id %>/edit">Edit this user.</a>
-    <% end %>
-  <% end %>
-  <a href="/logout"><button>Log Out</button></a>
+
 <% else %>
-  <h1>Please log in first.</h1>
+  <h1 class="text-center">Please log in first.</h1>
   <a href="/login">Log In</a>
 <% end %>
-<a href="/">Back to Main</a>
+<div class="text-center mb-5">
+  <a class="text-center" href="/users/<%= @user.id %>/posts"><strong>User's All Vlogs</strong></a>
+</div>
