create comment related files

--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -19,3 +19,4 @@
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
+<div class="text-center"><a href="/users/<%= @user.id %>">Back to User Profile</a></div>
