--- a/app/views/comments/edit.erb
+++ b/app/views/comments/edit.erb
@@ -1,10 +1,3 @@
-<% if flash[:message] %>
-  <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
-    <span><%= flash[:message] %></span>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-  </div>
-<% end %>
-
 <div class="container mt-5 mb-5 d-flex justify-content-center" style="width: 100vw;">
 
   <div class="card" style="width: 60vw;">
@@ -46,26 +39,36 @@
       Comments
     </div>
 
-    <% if logged_in? %>
-    <form action="/posts/<%= @post.id %>/comments" method="post" class="form-floating mt-2 ms-auto me-auto" style="width: 98%;">
-      <input name="comment[post_id]" type="hidden" value="<%= @post.id %>"/>
-      <input name="comment[commenter_id]" type="hidden" value="<%= current_user.id %>"/>
-      <input type="text" name="comment[content]" class="form-control ml-3 mr-3" id="content" placeholder="your comment" required>
-      <label for="content"><small><em>any comment?</em></small></label>
-      <button type="submit" class="btn btn-success float-end mt-2 mr-2">Submit</button>
-    </form>
-    <% end %>
-
     <div class="card-body">
-      <% @comments.each do |comment| %>
+
+      <% @comments.each do |comment| %><!--looping-->
+
+      <% if current_user == comment.commenter && @comment_id_check == comment.id || admin? && @comment_id_check == comment.id %><!--editing comment check-->
+
+      <div class="d-flex flex-row gap-2">
+        <form action="/posts/<%= @post.id %>/comments/<%= comment.id %>" method="post" class="form-floating mt-2 mb-0 d-flex flex-row gap-2" style="width: 98%;">
+          <input type="hidden" name="_method" value="patch">
+          <input name="comment[post_id]" type="hidden" value="<%= @post.id %>"/>
+          <input name="comment[commenter_id]" type="hidden" value="<%= comment.commenter.id %>"/>
+          <input name="comment[id]" type="hidden" value="<%= comment.id %>"/>
+          <input type="text" name="comment[content]" class="form-control ml-3 mr-3" id="content" placeholder="your comment" value="<%= comment.content %>" required>
+          <label for="content"><small><em>update your comment?</em></small></label>
+          <button type="submit" class="btn btn-success float-end mt-2 mr-2">Submit</button>
+        </form>
+      </div>
+      <div class="mt-0 mb-3 me-3">
+        <a href="/posts/<%= @post.id %>">Quit Editing</a>
+      </div>
+
+      <% else %><!--editing comment check-->
+
       <blockquote class="blockquote mb-3">
         <p class="fs-6"><%= comment.content %></p>
         <footer class="blockquote-footer fs-6 d-flex flex-row gap-2">
           <div>
             <span><%= comment.commenter.username %> <cite title="Source Title"><small>@ <% if comment.created_at == comment.updated_at %><%= comment.created_at %><% else %><%= comment.updated_at %> (edited)<% end %></small></cite></span>
           </div>
-
-          <% if current_user == comment.commenter || admin? %>
+          <% if current_user == comment.commenter || admin? %><!--button check-->
           <div>
             <a href="/posts/<%= @post.id %>/comments/<%= comment.id %>/edit">
               <button class="badge rounded-pill bg-warning"><small>Edit</small></button>
@@ -77,11 +80,16 @@
               <button type="submit" class="badge rounded-pill bg-danger"><small>Delete</small></button>
             </form>            
           </div>
-          <% end %>
-          
+          <% end %><!--button check-->
         </footer>
-      </blockquote>
-      <% end %>
+        <% end %>
+      </blockquote><!--editing comment check-->
+
+      <% end %><!--looping-->
+
     </div>
+
   </div>
 </div>
+
+<div class="d-flex flex-row"></div>
