--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -1,3 +1,10 @@
+<% if flash[:message] %>
+  <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+    <span><%= flash[:message] %></span>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+<% end %>
+
 <h1 class="display-3 lh-lg text-center">Check the Vlogs!</h1>
 
 <% if logged_in? %>
@@ -6,7 +13,7 @@
   </div>
 <% end %>
 
-<div class="accordion" id="accordionExample">
+<div class="accordion mb-5" id="accordionExample">
 
   <% @posts.each do |post| %>
   <div class="accordion-item">
@@ -17,10 +24,9 @@
     </h2>
     <div id="collapse<%= post.id %>" class="accordion-collapse collapse" aria-labelledby="heading<%= post.id %>" data-bs-parent="#accordionExample">
       <div class="accordion-body text-truncate">
+        <a href="posts/<%= post.id %>">
         <%= post.content %>
-      </div>
-      <div class="float-end">
-        <a href="posts/<%= post.id %>"><button type="button" class="btn btn-link">- Watch Vlog -</button></a>
+        </a>
       </div>
     </div>
   </div>
