--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,3 +1,10 @@
+<% if flash[:message] %>
+  <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+    <span><%= flash[:message] %></span>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+<% end %>
+
 <h1 class="mt-5 mb-3 text-center">Sign Up</h1>
 
 <div class="text-center">
