--- a/app/views/comments/index.erb
+++ b/app/views/comments/index.erb
@@ -5,15 +5,8 @@
       Comments
     </div>
 
-    <% if logged_in? %>
-      <form action="/posts/<%= @post.id %>/comments" method="post" class="form-floating mt-2 ms-auto me-auto" style="width: 98%;">
-        <input name="comment[post_id]" type="hidden" value="<%= @post.id %>">
-        <input name="comment[commenter_id]" type="hidden" value="<%= current_user.id %>">
-        <input type="text" name="comment[content]" class="form-control ml-3 mr-3" id="content" placeholder="your comment" required>
-        <label for="content"><small><em>any comment?</em></small></label>
-        <button type="submit" class="btn btn-success float-end mt-2 mr-2">Submit</button>
-      </form>
-    <% end %>
+    <%= yield %>
+
 
     <div class="card-body"><!--card-body-->
 
