--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -11,11 +11,11 @@
   <form action="/login" method="POST">
     <div class="mb-3">
       <label for="username" class="form-label">Username</label>
-      <input type="text" class="form-control" name="username" id="username">
+      <input type="text" class="form-control" name="username" id="username" required>
     </div>
     <div class="mb-3">
       <label for="password" class="form-label">Password</label>
-      <input type="password" class="form-control" name="password" id="password">
+      <input type="password" class="form-control" name="password" id="password" required>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
