--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -5,7 +5,7 @@
   </div>
 <% end %>
 
-<h1 class="mt-5 mb-3 text-center">Sign Up</h1>
+<h1 class="mt-3 mb-3 text-center">Sign Up</h1>
 
 <div class="text-center">
   <a href="/login"><button class="btn btn-secondary">Member?<br>Log In!</button></a>
@@ -15,16 +15,20 @@
   <form action="/signup" method="POST">
     <div class="mb-3">
       <label for="username" class="form-label">Username</label>
-      <input type="text" class="form-control" name="username" id="username" required>
+      <input type="text" class="form-control" name="username" id="username" placeholder="required" required>
     </div>
     <div class="mb-3">
       <label for="email" class="form-label">Email address</label>
-      <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" required>
+      <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="required" required>
       <div id="emailHelp" class="form-text">We'll never share your personal info with anyone else.</div>
     </div>
     <div class="mb-3">
       <label for="password" class="form-label">Password</label>
-      <input type="password" class="form-control" name="password" id="password" required>
+      <input type="password" class="form-control" name="password" id="password" placeholder="required" required>
+    </div>
+    <div class="mb-3">
+      <label for="password_confirm" class="form-label">Confirm Password</label>
+      <input type="password" class="form-control" name="password_confirm" id="password_confirm" placeholder="required" required>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
