--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -32,4 +32,6 @@
   </div>
   <% end %>
 
+  <h3 class="text-center text-black-50"><%= "No vlogs for this country yet." if @posts.empty? %></h3>
+
 </div>
