--- a/app/views/users/user_posts.erb
+++ b/app/views/users/user_posts.erb
@@ -26,4 +26,8 @@
   </div>
   <% end %>
 
+  <h3 class="text-center text-black-50"><%= "No vlogs yet. Create one now!" if @posts.empty? %></h3>
+
+  <%  %>
+
 </div>
