--- a/app/views/posts/search.erb
+++ b/app/views/posts/search.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-5 mb-5">Search Results</h1>
+<h1 class="text-center mt-5 mb-5">Search Results for [ <%= @keyword %> ]</h1>
 
 <div class="container">
   <% @results.each do |post| %>
